Add rotation functionality

--- a/TechnicalTest/TechnicalTest/Localized/es-419.lproj/Localizable.strings
+++ b/TechnicalTest/TechnicalTest/Localized/es-419.lproj/Localizable.strings
@@ -14,4 +14,4 @@
 "deleteSearch" = "Eliminar busqueda";
 "homeMessage" = "Ey! anímate y busca algo para tí";
 "searchButton" = "Buscar";
-"image" = "meli3";
+"image" = "icon";
